# upskillDE

./: .gitignore  Readme.md
.github/workflows/: dbt_ci.yml
phase1/: README.md  clean.py  explore.py
phase2/taxi_analytics/: dbt_project.yml  dev.duckdb
phase2/taxi_analytics/models/marts/: daily_revenue.sql  payment_summary.sql
phase2/taxi_analytics/models/staging/: sources.yml  stg_taxi_trips.sql  stg_taxi_trips.yml
phase2/taxi_analytics/tests/: assert_daily_revenue_reasonable.sql  assert_no_future_trips.sql  assert_payment_distribution_reasonable.sql
phase2/taxi_orchestrator/: README.md  pyproject.toml
phase2/taxi_orchestrator/.tmp_dagster_home_08t9kjkx/history/: runs.db
phase2/taxi_orchestrator/.tmp_dagster_home_08t9kjkx/history/runs/: .db  index.db
phase2/taxi_orchestrator/.tmp_dagster_home_08t9kjkx/schedules/: schedules.db
phase2/taxi_orchestrator/taxi_orchestrator/: assets.py  definitions.py
phase3/: Dockerfile.flink  README.md  consumer.py  docker-compose.yml  flink_commands.md  flink_interval_join.sql  producer.py
phase4/: query_iceberg.py  query_spark.py  query_spark.sql  setup_catalog.py  snapshot.py  write_iceberg.py
phase5/: embed.py  evaluate.py  ingest.py  query.py
phase5/docs/: dbt_models.md  phase3_readme.md
phase6/terraform/: .gitignore  glue.tf  main.tf  outputs.tf  s3.tf  variables.tf
