[project]
name = "taxi_orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "taxi_orchestrator.definitions"
code_location_name = "taxi_orchestrator"

[tool.hatch.build.targets.wheel]
packages = ["taxi_orchestrator"]
